# bayesian-bm25

./: .gitignore  CITATION.cff  HISTORY.md  README.md  demo.html  docs.html  examples.html  index.html  pyproject.toml  style.css
.github/workflows/: ci.yml
bayesian_bm25/: __init__.py  calibration.py  debug.py  fusion.py  metrics.py  multi_field.py  probability.py  scorer.py  vector_probability.py
benchmarks/: base_rate.py  benchmark.py  bmw_upper_bound.py  calibration.py  convergence.py  gating_functions.py  hybrid_beir.py  learnable_weights.py  metrics.py  multi_head_attention.py  neural_calibration.py  scalability.py  search_diagnostics.py  simple_ivf.py  utils.py  wand_upper_bound.py  weighted_fusion.py
docs/: IMPLEMENTATION_PLAN.md
examples/: basic_probability.py  boolean_not.py  fusion_debugger.py  gating_functions.py  learnable_fusion.py  live_ranking.py  multi_field_search.py  multi_head_fusion.py  neural_calibration.py  online_learning.py  score_fusion.py  search_and_retrieve.py  temporal_adaptation.py  threshold_filtering.py
scripts/: sync_citation.py
tests/: __init__.py  test_bmw.py  test_calibration.py  test_debug.py  test_fusion.py  test_metrics.py  test_multi_field.py  test_paper_theorems.py  test_prior_aware.py  test_probability.py  test_scorer.py  test_search_diagnostics.py  test_vector_index.py  test_vector_probability.py  test_wand.py
