[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-bm25"
version = "0.1.0"
description = "Bayesian probability transforms for BM25 retrieval scores"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
scorer = ["bm25s>=0.2.0"]
dev = [
    "pytest>=7.0",
    "bm25s>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["bayesian_bm25*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
