[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-bm25"
version = "0.9.0"
description = "Bayesian probability transforms for BM25 retrieval scores"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
]

[project.urls]
Repository = "https://github.com/cognica-io/bayesian-bm25"

[project.optional-dependencies]
scorer = ["bm25s>=0.2.0"]
bench = [
    "bm25s>=0.2.0",
    "ir_datasets",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "bm25s>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["bayesian_bm25*", "benchmarks*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
